Add mindmap canvases, subtask priority, notes, edit/delete features, browser notifications